src/test/ui/block-result/block-must-not-have-result-do.stderr
error[E0308]: mismatched types
  --> $DIR/block-must-not-have-result-do.rs:13:9
   |
13 |         true //~  ERROR mismatched types
   |         ^^^^ expected (), found bool
   |
   = note: expected type `()`
              found type `bool`

error: aborting due to previous error

